variables.Variables.scala.error
Compilation error:
Variables:9: error: type mismatch;
 found   : Int
 required: Boolean
while (nbPas){
       ^