variables.Variables.scala.code
var nbPas = 0 // Compte le nombre de pas effectués
while (!estSurBiscuit()){
  avance();
  nbPas+=1
}

porteBiscuit()

while (nbPas){
  recule();
  nbPas-=1
}